[package]
name = "ralph-nano"
version = "0.1.0"
edition = "2024"
authors = ["Ralph Autonomous Systems"]
description = "High-performance local autonomous agent optimized for Apple Silicon"
license = "MIT"
readme = "README.md"

[dependencies]
# Async Runtime
tokio = { version = "1.44", features = ["full", "tracing"] }

# Gemini API (direct via reqwest)

# Vector Database (Embedded)
lancedb = "0.18"
arrow-array = "54"
arrow-schema = "54"

# File System Traversal
walkdir = "2.5"
glob = "0.3"
ignore = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client (for Gemini API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async Utilities
futures = "0.3"
async-trait = "0.1"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time Utilities
chrono = { version = "0.4", features = ["serde"] }

# UUID Generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Environment Variables
dotenvy = "0.15"

# Embedding Generation
fastembed = "4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "ralph-nano"
path = "src/main.rs"
