[package]
name = "ralph-nano"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async Runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database & Vectors
lancedb = "0.18" # Keeping 0.18 as used previously, assuming compatibility
# fastembed = "4" # Removed in favor of Candle for Metal support
candle-core = { version = "0.8.2", features = ["metal"] }
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = { version = "0.19", features = ["onig"] }
hf-hub = "0.3"
arrow-array = "54"
arrow-schema = "54"

# Utilities
walkdir = "2.5"
regex = "1.10"
colored = "2.1"
anyhow = "1.0"
dotenvy = "0.15" # dotenv replacement for maintenance
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
dirs = "5.0"
futures = "0.3"
uuid = { version = "1.8", features = ["v4"] }
fs_extra = "1.3"
similar = "2.4"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
base64 = "0.22"

# TUI Dashboard
ratatui = "0.29"
crossterm = "0.28"

# HTTP/WebSocket Server (v2.0.0 NL APIs)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-tungstenite = "0.26"

# File Watching (Daemon Mode)
notify = "7.0"

# Git Integration
git2 = "0.20"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
